--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,8 +30,8 @@ jobs:
               uses: marvinpinto/action-automatic-releases@latest
               with:
                   repo_token: "${{ secrets.GITHUB_TOKEN }}"
-                  prerelease: true <- Marks as prerelease for release
-                  automatic_release_tag: "v${{ github.run_number }}-alpha" <- Tag name, only if you want
+                  prerelease: true
+                  automatic_release_tag: "v${{ github.run_number }}-alpha"
                   files: |
                       LICENSE
                       ./build/libs/dfmod-${{ github.run_number }}.jar
